2011-08-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/pfo.spad.pamphlet: Allow multiple
	algebraics in divisors.

2011-08-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/fs2ups.spad.pamphlet: Add power
	series expanders for liouvilian functions.

2011-08-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/expr.spad.pamphlet: Fix retraction of
	'rootOf' to AlgebraicNumber.

2011-08-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/gaussian.spad.pamphlet: Delete wrong
	special case for complex roots.

2011-08-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/liouv.spad.pamphlet: isi(): Evaluate
	Si(0) to 0.

2011-08-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/ffpoly.spad.pamphlet:numberOfNormalPoly():
	Fix bad pretend.

2011-08-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/apply.boot, src/interp/nruncomp.boot:
	Work around problem with compiling modemaps.

2011-08-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	src/interp/format.boot: Fix a typo.

2011-08-3  Martin Baker <ax87438@martinb.com>

	* src/algebra/computation.spad.pamphlet: Update.

2011-08-3  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/property.lisp, src/interp/parse.boot,
	src/interp/pf2sex.boot: Disable parser transformations
	of relational operators.
	src/algebra/catdef.spad.pamphlet,
	src/algebra/aggcat.spad.pamphlet,
	src/algebra/integer.spad.pamphlet,
	src/algebra/attribs.spad.pamphlet,
	src/algebra/fmod.spad.pamphlet,
	src/algebra/exposed.lsp.pamphlet,
	src/algebra/Makefile.in,
	src/algebra/mset.spad.pamphlet,
	src/interp/nrungo.boot: Adjust.

2011-08-3  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/efstruc.spad.pamphlet: Print offending kernel.

2011-08-3  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/boo*.input, src/algebra/boot-sum.in,
	src/algebra/bootstrap.spad, src/algebra/boo-nilcat.spad,
	src/algebra/boo-nildom.spad: Remove.