@@ -1,3 +1,12 @@
+2011-08-23  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	Support build in directories with long names.
+	* src/algebra/Makefile.in: Avoid too long line in
+	expanded command.
+	* src/hyper/*.c: Increase buffer sizes.
+	* src/hyper/parse-types.c:parse_env(): Elliminate
+	static buffer.
+
 2011-08-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/algebra/pfo.spad.pamphlet: Allow multiple
